# alghoritmi_5_sem

./: .flake8  Makefile  README.md
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/v1/: routes.py
backend/src/api/v1/endpoints/: lab1.py  lab2.py  lab3.py  lab4.py  lab5.py  lab6.py  lab7.py  lab8.py
backend/src/domain/: sort_domain.py
backend/src/schema/: backpack_schema.py  btree_schema.py  iter_matrix_schema.py  lcs_schema.py  sort_schema.py
backend/src/services/: avl_tree.py  b_tree.py  backpack_service.py  iter_matrix_service.py  lcs_service.py  lcs_suffix.py  red_black_tree.py  sort_service.py
docker_compose/: backend.yaml  frontend.yaml
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: main.tsx
frontend/src/components/: index.ts
frontend/src/components/Header/: HeaderMenu.module.css  HeaderMenu.tsx
frontend/src/components/lab1/: MainWindow.tsx
frontend/src/components/lab2/: Lab2Window.tsx  index.ts
frontend/src/components/lab3/: Lab3Window.tsx  index.ts
frontend/src/components/lab4/: Lab4Window.tsx  index.ts
frontend/src/components/lab5/: Lab5Window.tsx  index.ts
frontend/src/components/lab6/: Lab6Window.tsx  index.ts
frontend/src/components/lab7/: Lab7Window.tsx  index.ts
frontend/src/components/lab8/: Lab8Window.tsx  index.ts
frontend/src/pages/: index.ts
frontend/src/pages/HomePage/: page.tsx
frontend/src/pages/Lab2Page/: index.ts  page.tsx
frontend/src/pages/Lab3Page/: index.ts  (+1 more)
frontend/src/routing/: Router.tsx
frontend/src/types/: lab1_types.tsx  types.tsx
(+10 files in other folders)
